--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>SideView.qml</file>
+        <file>Placeholder.qml</file>
     </qresource>
 </RCC>
