--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>Placeholder.qml</file>
         <file>ContactList.qml</file>
         <file>MessageList.qml</file>
+        <file>StackedView.qml</file>
     </qresource>
 </RCC>
